# OCC

./: .gitignore  A-tt.hh  CMakeLists.txt  Makefile.am  OCC-v1.cbp  OCC-v1.mk  OCC-v1.workspace  OCC.cbp  OCC.code-workspace  configure.ac  developing.sln  occ-c90.txt
0/: A+-Driver.cc  A+-Driver.hh  A+-Scanner.cc  A+-Scanner.hh  A+-flex.cc  A+-occ.cc  A+.cc  A+.hh  A-Driver.cc  A-Driver.hh  A-Scanner.cc  A-Scanner.hh  A-intel-8086.cc  A.c  A.cc  A.h  A.hh  AI.cc  AI.hh  C90.hh  Exception.cc  Generator-Lexer-Declarartion.cc  Generator-Lexer-Functions.cc  Generator-Lexer-Rules.cc  Generator-Lexer.cc  Generator-Parser-Declarartion.cc  Generator-Parser-Functions.cc  Generator-Parser-Rules.cc  Generator.cc  Generator.hh  Makefile-OS  Makefile.am  OAS.hh  cc.cc  cc.hh  develop-lexer-oas.cc  develop-lexer-occ-c90.cc  driver.cc  driver.hh  intel-dec-code-A+.ll.frag  (+35 more)
0/A+-parser/decs/: intel-dec-types.frag  intel-types.frag
0/A+-parser/functs/: intel-rules-declaration.frag
0/A+-parser/rules/: intel-statement_instruction.frag  intel-statement_list.frag  intel-unit.frag
0/A-parser/: intel-dec-types-base.frag  intel-dec.frag  intel-funct.frag  intel-rules-insts.frag
0/A-parser/decs/: intel-end.frag  intel-types-base.frag  intel-types.frag  intel.frag
0/A-parser/rules/: intel-consts.frag  intel-insts.frag  intel-statement_instruction.frag  intel-statement_list.frag  intel-unit.frag
1/: A.hh  Buffer.cc  Buffer.hh  CMakeLists.txt  Generator.cc  Generator.hh  Makefile-OS  OCC-cmake.mk  intel.hh  occ-generetor-main.cc  occ-main.cc  occ.cc  occ.hh
1/A/: A.cc  A.hh  intel.cc  intel.hh
1/A/I/: A.cc  A.hh  Driver.cc  Driver.hh
1/A/I/Lexer/: Generator-AI.cc  declarartion.cc  functions.cc  rules.cc
1/A/I/Parser/: Generator-AI.cc  declarartion.cc  functions.cc  rules-instructions.cc  rules.cc
1/A/Lexer/: declarartion.cc  functions.cc  rules.cc
1/A/Parser/: declarartion.cc  functions.cc  rules.cc
1/A/processors/: intel.cc  intel.hh
core/: Buffer.cc  Buffer.hh  Compiler.cc  Compiler.hh  Exception.cc  Exception.hh  Lexer.cc  Lexer.hh  Makefile.am
developing/: developing.vcxproj  developing.vcxproj.filters
ing/: Software Development.odt  order-code
ing/A/: Sotware Development.odt  spec.odt
ing/AII/: Software Development.odt
po/: POTFILES.in
src/: A-tt-gram.hh  A-tt-i8086_insts.hh  A-tt.hh  A.cc  A.hh  AF-2.cc  AF-2.hh  AF-A.cc  AF-A.hh  AF.cc  AF.hh  Buffer.cc  Buffer.hh  C90-v0.hh  C90.hh  Exception.cc  Exception.hh  Lexer.cc  Lexer.hh  Makefile.am  Parser-A.cc  Parser.cc  Parser.hh  Tray.hh  base.cc  base.hh  c90-mesure.sh  devel-iso-90.cc  develop-iso-90.cc  develop-lexer-c90.cc  develop-lexer-flex-c90.c  develop-lexer-flex-c90.cc  develop-lexer-occ-c90.cc  flex-c90.sh  lexer-c90.l  main-c90.cc  main-occ-c90.cc  main.cc  occ-c90.sh  tt-2.hh  (+2 more)
src/A/: A.hh  Lexer.cc  Lexer.hh  tt.hh
src/A/tt/: gram.hh
src/A/tt/i8086/: insts.hh
src/tt/: chars.hh  i808x.hh  identifier.hh  numbers.hh
src/tt/A/: gram.hh  lex.hh
tests/: CMakeLists.txt  Makefile.am  boot-1.a+.asm  boot-1.a.asm  boot-2.a+.asm  boot-2.a.asm  boot-3.a.asm  boot.asm  booting.1.occ.asm  booting.2.occ.asm  booting.occ.asm  disk-1.img  format.sh  load-1.a.asm  main-AI.cc  main-ansi-90.c  main-v1-AI.cc  main.cc  prg1.cc.asm  test-1.y.asm  test-2.y.asm  tests-1.a.asm  tests-2.a.asm  tests.mk  v0-2.cc  v0-2.hh  v0-A+.cc  v0-A-lexer.cc  v0-A.cc  v0.cc  v0.hh  v1-AI.cc  v1.cc  v1.hh
